--- a/packages/slate-editor/src/styles/variables.scss
+++ b/packages/slate-editor/src/styles/variables.scss
@@ -74,3 +74,5 @@ $editor-selection-bg: #c7d2fe;
 $editor-selection-color: #3630a3;
 
 $editor-bookmark-card-height: 180px;
+
+$editor-link-color: #3c91ff;
